--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dev": "nodemon src/server.js"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@types/node": "^24.0.10",
+    "nodemon": "^3.1.10",
+    "typescript": "^5.8.3"
   }
 }
