--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "majorp2",
-  "version": "1.0.0",
-  "description": "The Pizza App",
-  "homepage": "https://github.com/shivam108ku/Pizza#readme",
-  "bugs": {
-    "url": "https://github.com/shivam108ku/Pizza/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shivam108ku/Pizza.git"
-  },
-  "license": "ISC",
-  "author": "Shivam K <shivam108ku@gmail.com>",
-  "type": "commonjs",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/server.js"
-  },
-  "devDependencies": {
-    "@types/node": "^24.0.10",
-    "nodemon": "^3.1.10",
-    "typescript": "^5.8.3"
-  }
+    "name": "majorp2",
+    "version": "1.0.0",
+    "description": "The Pizza App",
+    "homepage": "https://github.com/shivam108ku/Pizza#readme",
+    "bugs": {
+        "url": "https://github.com/shivam108ku/Pizza/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/shivam108ku/Pizza.git"
+    },
+    "license": "ISC",
+    "author": "Shivam K <shivam108ku@gmail.com>",
+    "type": "commonjs",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon src/server.js",
+        "format:fix": "prettier . --write",
+        "format:check": "prettier . --check"
+    },
+    "devDependencies": {
+        "@types/node": "^24.0.10",
+        "nodemon": "^3.1.10",
+        "prettier": "3.6.2",
+        "typescript": "^5.8.3"
+    }
 }
