--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "scripts": {
         "dev": "nodemon src/server.js",
         "format:fix": "prettier . --write",
-        "format:check": "prettier . --check"
+        "format:check": "prettier . --check",
+        "lint:check":"eslint . --check",
+        "lint:fix":"eslint . --fix"
     },
     "devDependencies": {
+        "@eslint/js": "^9.30.1",
         "@types/node": "^24.0.10",
+        "eslint": "^9.30.1",
         "nodemon": "^3.1.10",
         "prettier": "3.6.2",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.35.1"
     }
 }
