--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "type": "commonjs",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon dist/server.js",
+        "dev": "nodemon src/server.ts",
         "format:fix": "prettier . --write",
         "format:check": "prettier . --check",
         "lint:check": "eslint . --check",
@@ -24,12 +24,14 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
+        "@types/express": "^5.0.3",
         "@types/node": "^24.0.10",
         "eslint": "^9.30.1",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.2",
         "nodemon": "^3.1.10",
         "prettier": "3.6.2",
+        "ts-node": "^10.9.2",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.35.1"
     },
@@ -40,6 +42,7 @@
         ]
     },
     "dependencies": {
-        "dotenv": "^17.0.1"
+        "dotenv": "^17.0.1",
+        "express": "^5.1.0"
     }
 }
