--- a/package.json
+++ b/package.json
@@ -20,19 +20,24 @@
         "format:check": "prettier . --check",
         "lint:check": "eslint . --check",
         "lint:fix": "eslint . --fix",
+        "test": "jest --watch --runInBand",
         "prepare": "husky"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
+        "@types/jest": "^30.0.0",
         "@types/node": "^24.0.10",
+        "@types/supertest": "^6.0.3",
         "@types/winston": "^2.4.4",
         "eslint": "^9.30.1",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.2",
         "nodemon": "^3.1.10",
         "prettier": "3.6.2",
+        "supertest": "^7.1.1",
+        "ts-jest": "^29.4.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.35.1"
