--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "type": "commonjs",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon src/server.ts",
+        "dev": "nodemon --legacy-watch src/server.ts",
+        "docker:dev": "docker run --rm -it -v \"%cd%:/usr/src/app\" -v \"/usr/src/app/node_modules\" --env-file \"%cd%\\.env\" -p 5501:5501 -e NODE_ENV=development auth-service:dev",
         "format:fix": "prettier . --write",
         "format:check": "prettier . --check",
         "lint:check": "eslint . --check",
